Add font awesome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -533,6 +533,9 @@
 
 <router-outlet></router-outlet>
 
-<button class="btn btn-primary">Test Button</button>
+<button class="btn btn-primary">
+  Bootstrap Test Button
+</button>
 
+<i class="fas fa-info-circle" aria-hidden="true">Font awesome test</i>
 
