--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,4 @@
 
 @import 'scss/variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
+@import '@fortawesome/fontawesome-free/css/all.css';
