--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal text-primary">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm">
+  <h3 class="my-0 mr-md-auto font-weight-normal text-primary">
     <i class="fas fa-arrows-alt"></i>
     {{title}}
-  </h5>
+  </h3>
   <ng-content></ng-content>
   <ng-container *ngIf="isLoggedin; then enquiry; else login"></ng-container>
 </div>
