Update user list and add service for user

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <nav class="users__nav pb-2">
   <ol class="users__breadcrumb breadcrumb mb-0 pb-0">
     <li class="breadcrumb-item"><a href="#">Home</a></li>
-    <li class="breadcrumb-item"><a href="#">dashboard</a></li>
+    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
   </ol>
   <div class="d-flex ml-2 mr-3">
     <div class="p-2 flex-grow-1">
