--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-navbar [title]="title">
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <a class="p-2 text-dark" routerLink="about" routerLinkActive="active">About</a>
-    <a class="p-2 text-dark" routerLink="contact" routerLinkActive="active">Contact</a>
+    <a class="p-2 text-dark" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">HOME</a>
+    <a class="p-2 text-dark" routerLink="about" routerLinkActive="active">ABOUT</a>
+    <a class="p-2 text-dark" routerLink="contact" routerLinkActive="active">CONTACT</a>
   </nav>
 </app-navbar>
 
