--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,13 +1,30 @@
 <div class="user-list">
-  <div class="card">
+  <br>
+  <div class="user-list__card card mt-3">
     <div class="card-body">
-      <h4 class="card-title">Title</h4>
-      <p class="card-text">Text</p>
+      <div class="user-list__heading d-flex">
+        <p class="card-text p-2 flex-grow-1 text-muted">users</p>
+        <p class="card-text p-2 w-25 pl-5 text-muted">actions</p>
+
+      </div>
+      <ul class="list-group list-group-flush">
+        <li *ngFor="let user of users" class="user-list__item d-flex list-group-item">
+          <img class="user-list__picture rounded-circle p-2" [src]="user.imageUrl">
+          <p class="user-list__name p-2 mt-5">
+            {{user.name}}
+          </p>
+          <div class="user-list__actions p-2 flex-grow-1 text-right mt-5">
+            <button type="button" class="btn btn-outline-primary">
+              <i class="fas fa-pen"></i>
+            </button>
+
+            <button type="button" class="btn btn-outline-primary ml-3">
+              <i class="fas fa-trash"></i>
+            </button>
+            <i class="fas fa-chevron-right text-primary ml-5"></i>
+          </div>
+        </li>
+      </ul>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Item 1</li>
-      <li class="list-group-item">Item 2</li>
-      <li class="list-group-item">Item 3</li>
-    </ul>
   </div>
 </div>
