--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -9,7 +9,7 @@
 
     </div>
     <div class="p-2">
-      <button type="button" class="btn btn-primary rounded-pill">
+      <button type="button" class="btn btn-primary rounded-pill" (click)="addUserModal.open()">
         <i class="fas fa-plus"></i>
         New User
       </button>
@@ -17,3 +17,23 @@
   </div>
 </nav>
 <router-outlet></router-outlet>
+
+<app-modal [title]="'add user'" #addUserModal>
+  <form [formGroup]="addUserForm">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" formControlName="name" class="form-control" name="name" id="name" placeholder="name...">
+    </div>
+
+    <div class="form-group">
+      <label for="job">Job title</label>
+      <input type="text" formControlName="job" class="form-control" name="job" id="job" placeholder="job title...">
+    </div>
+
+    <div class="form-group d-flex mt-4">
+      <button type="button" class="btn btn-outline-primary rounded-pill w-100">cancel</button>
+      <button type="submit" class="btn btn-primary rounded-pill w-100 ml-2">Add</button>
+
+    </div>
+  </form>
+</app-modal>
