--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -18,7 +18,7 @@
 </nav>
 <router-outlet></router-outlet>
 
-<app-modal [title]="'add user'" #addUserModal>
+<app-modal [title]="'add user'" [isHidden]="modalHidden" #addUserModal>
   <form [formGroup]="addUserForm">
     <div class="form-group">
       <label for="name">Name</label>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="form-group d-flex mt-4">
-      <button type="button" class="btn btn-outline-primary rounded-pill w-100">cancel</button>
+      <button type="button" class="btn btn-outline-primary rounded-pill w-100" (click)="closeModal()">cancel</button>
       <button type="submit" class="btn btn-primary rounded-pill w-100 ml-2">Add</button>
 
     </div>
