--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -30,7 +30,10 @@
         background-color: #7F8C8D;
         transform: translate(100%, -70%);
         position: absolute;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden
     }
 
     &__user-ico {
@@ -39,6 +42,12 @@
         position: absolute;
         top: 30px;
         left: 33px;
+    }
+
+    &__user-img {
+        flex-shrink: 0;
+        min-width: 100%;
+        min-height: 100%
     }
 
     &__overlay {
