--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -18,7 +18,7 @@
 </nav>
 <router-outlet></router-outlet>
 
-<app-modal [title]="'add user'" [isHidden]="modalHidden" #addUserModal>
+<app-modal [title]="'add user'" [isHidden]="modalHidden" #addUserModal (ctaClick)="onModalCtaClick($event)">
   <form [formGroup]="addUserForm">
     <div class="form-group">
       <label for="name">Name</label>
@@ -28,12 +28,6 @@
     <div class="form-group">
       <label for="job">Job title</label>
       <input type="text" formControlName="job" class="form-control" name="job" id="job" placeholder="job title...">
-    </div>
-
-    <div class="form-group d-flex mt-4">
-      <button type="button" class="btn btn-outline-primary rounded-pill w-100" (click)="closeModal()">cancel</button>
-      <button type="submit" class="btn btn-primary rounded-pill w-100 ml-2">Add</button>
-
     </div>
   </form>
 </app-modal>
